@@ -15,6 +15,7 @@ Agregada emulación de Trojan Light Pen
 Agregada emulación de Datel Lightwriter
 Agregada emulación de Spectrum Doodler Lightpen
 Agregada mirilla de lightgun
+Permitir guardar snapshots en RAM; antes podías hacerlo automáticamente a intervalo fijo, ahora puedes guardarlo cuando quieras
 
 Mejorado ZX Vision:
 - Agregado nuevo Menú Superior (no habilitado por defecto)
