@@ -105,3 +105,8 @@ en caso contrario, copiar tal cual la ram de origen en destino, repitiendo si es
 
 -icono para snapshots in ram. Poder guardar snap en ram manualmente, no solo a intervalos.
 quiza icono ramdisk que englobe snapshots y otras cosas
+
+-snapshots en ram
+*icono para browse snapshots
+*icono para guardar snapshot
+*poder ver miniatura al hacer browse de snapshots
