@@ -15,6 +15,7 @@ Added emulation of Trojan Light Pen
 Added emulation of Datel Lightwriter
 Added emulation of Spectrum Doodler Lightpen
 Added lightgun scope
+Allow to save snapshots in RAM; you could do it before automatically at fixed intervals, now you can save it whenever you want
 
 Improved ZX Vision:
 - Added new Top Menu (not enabled by default)
